@@ -1,4 +1,8 @@
-$Id: ChangeLog,v 1.11 2004/02/12 18:51:12 h_oudejans Exp $
+$Id: ChangeLog,v 1.12 2004/02/27 18:41:54 h_oudejans Exp $
+
+2004-03-03 Herman Oudejans <hn.oudejans@quicknet.nl>
+	* adapted for openmsx cvs Changelog version 1.1156 (openmsx_info 
+	  command output is now a tcl-list).
 
 2004-02-27 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* fixed a sync error when querying the settings
